2013-02-01  Glenn Morris  <rgm@gnu.org>

	* calc/calc-help.el (calc-view-news): Use view-emacs-news.

	* calc/README, calc/README.prev: Rename/merge to etc/CALC-NEWS.

2013-01-31  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp.el (tramp-tramp-file-p): Comment check for
	`string-as-unibyte'.  The function does not exist on XEmacs, and
	likely we need another approach.

	* net/tramp-sh.el (tramp-compute-multi-hops): Check, whether
	`tramp-gw-*' variables are bound.

2013-01-31  Glenn Morris  <rgm@gnu.org>

	* files.el (basic-save-buffer-2): Choose coding system for
	writing the file before backing it up, to reduce delay between
	backing up and writing the new version.  (Bug#13522)

2013-01-31  Michal Nazarewicz  <mina86@mina86.com>

	* simple.el (cycle-spacing): New command.
	(just-one-space): Use it.

2013-01-31  Stefan Monnier  <monnier@iro.umontreal.ca>

	* progmodes/opascal.el: Rename from delphi.el.  Use lexical-binding.
	(opascal-newline-always-indents): Remove custom.
	(opascal-tab, opascal-newline): Remove commands.
	(opascal-new-comment-line): Insert "\n" instead of calling newline.
	(opascal-mode-map): Keep default bindings for RET and TAB and DEL.
	(opascal-save-match-data): Remove, use save-match-data instead.
	(opascal-save-state): Use with-silent-modifications.

	* progmodes/pascal.el (pascal-mode-syntax-table): Accept //..\n comments
	(bug#13585).

2013-01-30  Juri Linkov  <juri@jurta.org>

	* frame.el (toggle-frame-maximized, toggle-frame-fullscreen):
	Use fullboth as an alias for fullscreen.  Suggested by Jan Djärv in
	<http://lists.gnu.org/archive/html/emacs-devel/2013-01/msg00203.html>.

2013-01-30  Stefan Monnier  <monnier@iro.umontreal.ca>

	* progmodes/make-mode.el (makefile-backslash-region): Don't compute
	column if we're just deleting the backslashes.
	(makefile-fill-paragraph): Use eolp.

2013-01-30  Michael Albinus  <michael.albinus@gmx.de>

	* autorevert.el (auto-revert-use-notify): Fix docstring.
